# wb_service

./: .env copy  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  loader.py  main.py  pyproject.toml  requirements.txt
back/pages/: get.py  post.py
back/utils/: load_info.py  shedule_get.py
bot/: main.py
data/: config.py
deploy/: .env.sample  Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: d2b723519c34_.py
src/: app.py  bot.py
src/api/: dependencies.py
src/api/router/: auth.py  docs.py  handler.py
src/back/pages/: auth.py  get.py
src/back/utils/: load_info.py  shedule_get.py
src/core/: config.py
src/data/: config.py  schemes.py
src/database/: core.py  database.py  models.py
src/database/migrations/: env.py
src/database/migrations/versions/: 9b4ace95bc43_.py
src/database/models/: product.py
src/database/repositories/: product.py
src/schema/: product.py
src/service/: product.py
src/util/: load_info.py  logging.py  schedule_get.py
